Cursos com letra minuscula

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Aulas de Cursos de DevOps da Alura</title>
+    <title>Aulas de cursos de DevOps da Alura</title>
 </head>
 <body>
     <ul>
